--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {
 .sidenav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
-  font-size: 100px;
+  font-size: 150px;
   color: #818181;
   display: block;
   transition: 0.3s;
@@ -65,10 +65,10 @@ background: 0xdddddd;
     
     <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">Übersicht</a>
-  <a href="#">Befunde</a>
-  <a href="#">Arztbriefe</a>
-  <a href="#">Impfstatus</a>
+  <a href="index.html">Übersicht</a>
+  <a href="befunde.html">Befunde</a>
+  <a href="briefe.html">Arztbriefe</a>
+  <a href="status.html">Impfstatus</a>
 </div>
 
 <div id="main">
