--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: gray;
+  opacity: 0.7;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
@@ -26,7 +27,7 @@ body {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 100px;
-  color: #818181;
+  color: white;
   display: block;
   transition: 0.3s;
 }
@@ -39,7 +40,7 @@ body {
   position: absolute;
   top: 0;
   right: 25px;
-  font-size: 36px;
+  font-size: 150px;
   margin-left: 50px;
 }
 
@@ -85,8 +86,8 @@ background: 0xdddddd;
     <script>
       
       //menu functions
-     function openNav() {
-  document.getElementById("mySidenav").style.width = "500px";
+function openNav() {
+  document.getElementById("mySidenav").style.width = window.innerWidth;
   document.getElementById("main").style.marginLeft = "250px";
   document.body.style.backgroundColor = "rgba(0,0,0,0.4)";
 }
