--- a/index.html
+++ b/index.html
@@ -183,7 +183,9 @@ background: 0xdddddd;
 
   document.getElementById("mySidenav").style.width = "550px";
 
-  document.getElementById("main").style.marginLeft = "2500px";
+  document.getElementById("main").style.marginLeft = "250px";
+         
+  document.getElementById("main").style.visibility='hidden';
 
   document.body.style.backgroundColor = "rgba(0,0,0,0.4)";
 
@@ -196,6 +198,8 @@ function closeNav() {
   document.getElementById("mySidenav").style.width = "0";
 
   document.getElementById("main").style.marginLeft= "0";
+    
+    document.getElementById("main").style.visibility='visible';
 
   document.body.style.backgroundColor = "white";
 
