--- a/befunde2.html
+++ b/befunde2.html
@@ -15,7 +15,7 @@
 <script src="js/jQuery.ui.js"></script>
 
 
-<table class="cell-border compact stripe" id="myTable" style="width:100%">
+<table class="cell-border stripe" id="myTable" style="width:100%">
         <thead>
             <link rel="stylesheet" type="text/css"href="styles/dataTables.jqueryui.min.css">
             <link rel="stylesheet" type="text/css"href="styles/jquery-ui.css">
