--- a/befunde2.html
+++ b/befunde2.html
@@ -14,6 +14,17 @@
 <script src="js/jQuery.datatables.js"></script>
 <script src="js/jQuery.ui.js"></script>
 
+<img src="images/unibw.png" width=75% height=auto>
+
+<style>
+    img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+</style>
 
 <table class="cell-border stripe" id="myTable" style="width:100%">
         <thead>
