--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         
             <a id="current" >Übersicht</a>
 
-            <a href="befunde2.html">Befunde</a>
+            <a href="befunde.html">Befunde</a>
 
             <a href="briefe.html">Arztbriefe</a>
 
