delete item from local storage

--- a/befunde.html
+++ b/befunde.html
@@ -230,6 +230,7 @@
         
        window.onload = function() {
                 var test = localStorage.getItem("befund");
+                localStorage.removeItem("befund");
                 console.log(test);
         };
          
