--- a/befunde.html
+++ b/befunde.html
@@ -202,7 +202,7 @@
             </tr>
     </thead>
         <tbody>
-            <tr onclick="onRowClick(event, this)" id= "knie">
+            <tr onclick="onRowClick(event, this)" id= "knee">
                 <td>2020-06-04</td>
                 <td>Knie geprellt</td>
                 <td>Dr. Best</td>
@@ -216,7 +216,7 @@
                 <td>UniBw München</td>
             </tr>
          
-            <tr onclick="onRowClick(event, this)" id= "schulter">
+            <tr onclick="onRowClick(event, this)" id= "shoulder">
                 <td>2019-11-26</td>
                 <td>Schulter ausgekugelt</td>
                 <td>Dr. Best</td>
@@ -325,13 +325,13 @@
         }
         //initially set tooltip texts
         document.addEventListener("DOMContentLoaded", function(){
-            document.getElementById("knie").setAttribute("tooltiptext", 
+            document.getElementById("knee").setAttribute("tooltiptext", 
                                                          "<h4 style = 'color:#e65c00;font-size: 50px;'>Knie geprellt</h4><br>"
                                                         +"<p style = 'font-size: 50px; margin-top: 10px;'>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam </p>");
             document.getElementById("hand").setAttribute("tooltiptext", 
                                                          "<h4 style = 'color:#e65c00;font-size: 50px;'>Hand gebrochen</h4><br>"
                                                         +"<p style = 'font-size: 50px; margin-top: 10px;'>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam </p>");
-            document.getElementById("schulter").setAttribute("tooltiptext", 
+            document.getElementById("shoulder").setAttribute("tooltiptext", 
                                                          "<h4 style = 'color:#e65c00;font-size: 50px;'> Schulter ausgekugelt</h4><br>"
                                                          +"<p style = 'font-size: 50px; margin-top: 10px;'>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam </p>");
         });
