--- a/befunde.html
+++ b/befunde.html
@@ -168,7 +168,7 @@
 
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
-            <a href="index.html">
+            <a href="profil.html">
                <img id="NavImage" alt="profile image" src="images/profile.png" width=30% height=auto>
             </a>
         
