sidenav customized, page Arztbriefe added, onclick Überweisung,

--- a/befunde.html
+++ b/befunde.html
@@ -179,6 +179,8 @@
             <a href="briefe.html">Arztbriefe</a>
 
             <a href="status.html">Impfstatus</a>
+         
+            <a href="termin.html">Termin</a>
 
         </div>
     
