--- a/termin.html
+++ b/termin.html
@@ -365,6 +365,8 @@
             <a href="briefe.html">Arztbriefe</a>
 
             <a href="status.html">Impfstatus</a>
+            
+             <a id="current">Termin</a> 
 
         </div>
     
