added login; added theme for color blind people; adjusted calender -> it stores events

--- a/befunde.html
+++ b/befunde.html
@@ -16,7 +16,7 @@
 <script src="js/jQuery.ui.js"></script>
 
 
-<a href="index.html">
+<a href="uebersicht.html">
     <img alt="Button" src="images/unibw.png" width=75% height=auto>
 </a>    
     
@@ -172,7 +172,7 @@
                <img id="NavImage" alt="profile image" src="images/profile.png" width=30% height=auto>
             </a>
         
-            <a href="index.html" >Übersicht</a>
+            <a href="uebersicht.html" >Übersicht</a>
 
             <a id="current">Befunde</a>
 
