--- a/termin.html
+++ b/termin.html
@@ -358,7 +358,7 @@
                <img id="NavImage" alt="profile image" src="images/profile.png" width=30% height=auto>
             </a>
                
-            <a href="index.html" >Übersicht</a>
+            <a href="uebersicht.html" >Übersicht</a>
 
             <a href="befunde.html">Befunde</a>
 
